[tool.poetry]
name = "coco"
version = "0.1.0"
description = ""
authors = ["ranhomri <ran.homri@tensorleap.ai>"]
readme = "README.md"
packages = [{include = "coco"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
code-loader = "^1.0.9"
code-loader-helpers = "1.0.5"
pycocotools = "^2.0.6"
tqdm = "^4.65.0"
google-cloud-storage = "^2.10.0"
pyyaml = "^6.0"
torch = "1.12.1"
protobuf = "^3.19.4"
opencv-python-headless = "4.5.5.62"
onnxruntime = "1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
integration_test = "leap_custom_test: check_integration"
